# ai_project

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend-java/: pom.xml
backend-java/src/main/java/com/eduflow/backend/: BackendJavaApplication.java
backend-java/src/main/java/com/eduflow/backend/controller/: ResourceController.java
backend-java/src/main/java/com/eduflow/backend/model/: LearningResource.java
backend-java/src/main/java/com/eduflow/backend/repository/: LearningResourceRepository.java
backend-java/src/main/resources/: application.properties
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/resources/: route.ts
frontend/app/resources/: page.tsx
frontend/app/resources/new/: page.tsx
python-ai/: main.py  pyproject.toml  requirements.txt
