[project]
name = "eduflow-ai"
version = "0.1.0"
description = "FastAPI AI recommendation service for EduFlow"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.105.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.7.0",
    "httpx>=0.26.0"
]

[tool.poetry.dev-dependencies]
pytest = "^8.4.0"
